# th_backend

./: Cargo.toml  Rocket.toml
src/: db_connection.rs  lib.rs  main.rs  routes.rs  server.rs
src/controllers/: competition_controller.rs  mod.rs
src/models/: base_model.rs  challenge.rs  challenge_type.rs  competition.rs  competition_player.rs  mod.rs  player.rs  player_challenge.rs  prelude.rs
