[package]
name = "th_backend"
version = "0.1.0"
authors = ["Vanfarock <vinicius.m.m.2002@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.5"
rocket_contrib = "0.4.5"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"

[lib]
name = "th_backend"
path = "./src/lib.rs"

[[bin]]
name = "app"
path = "./src/bin/app.rs"