[package]
name = "th_backend"
version = "0.1.0"
authors = ["Vanfarock <vinicius.m.m.2002@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.5"
rocket_contrib = "0.4.5"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"

mongodb = { version="1.1.1", default-features=false, features=["async-std-runtime"] }
async-std = "1.6.5"
chrono = { version = "0.4.19", features = ["serde"] }
async-trait = "0.1.41"
futures = "0.3.6"

[lib]
name = "th_backend"
path = "./src/lib.rs"

[[bin]]
name = "app"
path = "./src/bin/app.rs"